--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -42,6 +42,6 @@ submissions:
   Shannon Paige:
     repo: https://github.com/ShannonPaige/skill-inventory-crud
   John Slota:
-    repo: 
+    repo: https://github.com/slotaj/robot_world
   Rebekah Sosa:
     repo:  
