--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -2,7 +2,7 @@ submissions:
   Tyler Komoroske:
     repo: 
   Chad Minnerath:
-    repo: 
+    repo: https://github.com/cminnerath/skill_inventory
   Nicole Hall:
     repo: 
   Torie Joy-Warren:
