--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -12,7 +12,7 @@ submissions:
   Pat Wey:
     repo: https://github.com/patwey/robot_world
   Aaron Careaga:
-    repo: 
+    repo: https://github.com/acareaga/robot-world
   Ross Edfort:
     repo: 
   Marlo Major:
