--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -1,6 +1,6 @@
 submissions:
   Tyler Komoroske:
-    repo: 
+    repo: https://github.com/tjkomor/skill_inventory
   Chad Minnerath:
     repo: 
   Nicole Hall:
