--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -36,9 +36,9 @@ submissions:
   Emily Dowdle:
     repo: https://github.com/emilydowdle/skill-inventory-crud
   Charissa Lawrence:
-    repo: https://github.com/robbielane/robots
+    repo: https://github.com/JaggedLaw/skill-inventory-crud
   Robbie Lane:
-    repo: 
+    repo: https://github.com/robbielane/robots
   Shannon Paige:
     repo: https://github.com/ShannonPaige/skill-inventory-crud
   John Slota:
