--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -14,7 +14,7 @@ submissions:
   Aaron Careaga:
     repo: https://github.com/acareaga/robot-world
   Ross Edfort:
-    repo: 
+    repo: https://github.com/rossedfort/robot_world
   Marlo Major:
     repo:https://github.com/marlomajor/spicy_robot_world
   Jill Donohue:
