--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -20,7 +20,7 @@ submissions:
   Jill Donohue:
     repo:
   Amber Crawford:
-    repo: 
+    repo: https://github.com/amcrawford/robot-world
   Ryan Johnson:
     repo: https://github.com/rjohnson4444/skill-inventory-crud
   Sekhar Paladugu:
