cole added her repo
cole added her repo

--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -4,7 +4,7 @@ submissions:
   Chad Minnerath:
     repo: https://github.com/cminnerath/skill_inventory
   Nicole Hall:
-    repo: 
+    repo: https://github.com/NicoleHall/skills-take-two
   Torie Joy-Warren:
     repo: https://github.com/toriejw/robot-world
   Jhun de Andres:
