--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -30,7 +30,7 @@ submissions:
   Matt Stjernholm:
     repo: https://github.com/matt-stj/robot_world/tree/secondary
   Matt Rooney:
-    repo: 
+    repo: https://github.com/MattRooney/robot-world
   Edgar Duran:
     repo:
   Emily Dowdle:
