checkpoint one and repo updated

--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -85,8 +85,8 @@ submissions:
     checkpoint 2 sha:
     checkpoint 3 sha:
   Emily Dowdle:
-    repo:
-    checkpoint 1 sha:
+    repo: https://github.com/emilydowdle/contact_manager
+    checkpoint 1 sha: 7cd78ee1366f1f5d78758cf1fc25d194d1cc5404
     checkpoint 2 sha:
     checkpoint 3 sha: 
   Charissa Lawrence:
