--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -70,8 +70,8 @@ submissions:
     checkpoint 2 sha:
     checkpoint 3 sha: 
   Matt Stjernholm:
-    repo:
-    checkpoint 1 sha:
+    repo: https://github.com/matt-stj/contact_manager
+    checkpoint 1 sha: a8c814a
     checkpoint 2 sha:
     checkpoint 3 sha: 
   Matt Rooney:
