--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -1,7 +1,7 @@
 submissions:
   Tyler Komoroske:
-    repo: 
-    checkpoint 1 sha:
+    repo: https://github.com/tjkomor/contact_manager
+    checkpoint 1 sha: 27084ed8e1da700a386f4441b36079cc4dc79c40
     checkpoint 2 sha:
     checkpoint 3 sha:
   Chad Minnerath:
