--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -75,13 +75,13 @@ submissions:
     checkpoint 2 sha:
     checkpoint 3 sha: 
   Matt Rooney:
-    repo:
-    checkpoint 1 sha:
+    repo: https://github.com/MattRooney/contact-manager
+    checkpoint 1 sha: ac89e978ff714d9ae8b1036830bc7ecc6df9e6c2
     checkpoint 2 sha:
     checkpoint 3 sha: 
   Edgar Duran:
     repo:
-    checkpoint 1 sha:
+    checkpoint 1 sha: 
     checkpoint 2 sha:
     checkpoint 3 sha:
   Emily Dowdle:
