--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -65,8 +65,8 @@ submissions:
     checkpoint 2 sha:
     checkpoint 3 sha: 
   Jason Pilz:
-    repo:
-    checkpoint 1 sha:
+    repo: https://github.com/jasonpilz/ContactManager.git
+    checkpoint 1 sha: ae5b012b904f4c2044e09988aa9979ffbd5d05a1
     checkpoint 2 sha:
     checkpoint 3 sha: 
   Matt Stjernholm:
