--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -25,8 +25,8 @@ submissions:
     checkpoint 2 sha:
     checkpoint 3 sha:  
   Pat Wey:
-    repo:
-    checkpoint 1 sha:
+    repo: https://github.com/patwey/contact_manager
+    checkpoint 1 sha: 4cfd56c3a5b6c54a79634612163a95704bdb2825
     checkpoint 2 sha:
     checkpoint 3 sha: 
   Aaron Careaga:
