added first sha for first check point
added first sha for first check point

--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -10,8 +10,8 @@ submissions:
     checkpoint 2 sha:
     checkpoint 3 sha: 
   Nicole Hall:
-    repo:
-    checkpoint 1 sha:
+    repo: https://github.com/NicoleHall/Contact-Manager
+    checkpoint 1 sha: 890e3ac
     checkpoint 2 sha:
     checkpoint 3 sha: 
   Torie Joy-Warren:
