--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -94,10 +94,10 @@ submissions:
     checkpoint 1 sha:
     checkpoint 2 sha:
     checkpoint 3 sha: 
-  Robbie Lane:
-    repo:
-    checkpoint 1 sha:
-    checkpoint 2 sha:
+  Robbie Lane: 
+    repo: https://github.com/robbielane/contact_manager
+    checkpoint 1 sha: bea8f0235d6699e1a5c2861bff0023c65b747f5a
+    checkpoint 2 sha: c2fc827e0259b7d4f1622d7f2bf5f698ebedeaf1
     checkpoint 3 sha: 
   Shannon Paige:
     repo:
