--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -37,7 +37,7 @@ submissions:
   Ross Edfort:
     repo: https://github.com/rossedfort/contact_manager
     checkpoint 1 sha: 4421c8d9d05c01b7ac53950ae90e3c77c382e08c
-    checkpoint 2 sha:
+    checkpoint 2 sha: 3721e97eec65c4a6b008cc62952c7e345c932fd6
     checkpoint 3 sha: 
   Marlo Major:
     repo:
