--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -87,7 +87,7 @@ submissions:
   Emily Dowdle:
     repo: https://github.com/emilydowdle/contact_manager
     checkpoint 1 sha: 7cd78ee1366f1f5d78758cf1fc25d194d1cc5404
-    checkpoint 2 sha:
+    checkpoint 2 sha: ba17f969b29f3857aca8f2e90c17460219f14201
     checkpoint 3 sha: 
   Charissa Lawrence:
     repo:
