--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -52,7 +52,7 @@ submissions:
   Amber Crawford:
     repo: https://github.com/amcrawford/contact-manager
     checkpoint 1 sha:b223f89997e04cb30b97cd7a23581c1f7d9ab1f1
-    checkpoint 2 sha:
+    checkpoint 2 sha: 569c1007beea47f0fc8ec3edbbcdf4fd9e28edb9
     checkpoint 3 sha: 
   Ryan Johnson:
     repo:
