--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -12,7 +12,7 @@ submissions:
   Nicole Hall:
     repo: https://github.com/NicoleHall/Contact-Manager
     checkpoint 1 sha: 890e3ac
-    checkpoint 2 sha:
+    checkpoint 2 sha: 1048110
     checkpoint 3 sha: 
   Torie Joy-Warren:
     repo: https://github.com/toriejw/contact-manager
