--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -17,7 +17,7 @@ submissions:
   Torie Joy-Warren:
     repo: https://github.com/toriejw/contact-manager
     checkpoint 1 sha: 8a1ddf8cede1547fdee75af0c7a627b296ade573
-    checkpoint 2 sha:
+    checkpoint 2 sha: c05dc6015faa5c9538844e2d197e570161d25092
     checkpoint 3 sha: 
   Jhun de Andres:
     repo:https://github.com/joshuajhun/contact-manager-
