--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -27,7 +27,7 @@ submissions:
   Pat Wey:
     repo: https://github.com/patwey/contact_manager
     checkpoint 1 sha: 4cfd56c3a5b6c54a79634612163a95704bdb2825
-    checkpoint 2 sha:
+    checkpoint 2 sha: ba69aacc1389aaa3e03f3492b958aaab684c0d6e
     checkpoint 3 sha: 
   Aaron Careaga:
     repo: https://github.com/acareaga/contact-manager
