--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -28,7 +28,7 @@ submissions:
     repo: https://github.com/patwey/contact_manager
     checkpoint 1 sha: 4cfd56c3a5b6c54a79634612163a95704bdb2825
     checkpoint 2 sha: ba69aacc1389aaa3e03f3492b958aaab684c0d6e
-    checkpoint 3 sha: 
+    checkpoint 3 sha: fe98527d2cd2cf113bc22207a0d5fd9f6f5ed911
   Aaron Careaga:
     repo: https://github.com/acareaga/contact-manager
     checkpoint 1 sha: 88a26a7ced219a807546e30f75efbd040afaa165
