--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -58,7 +58,7 @@ submissions:
     repo:
     checkpoint 1 sha: 9d06e41
     checkpoint 2 sha: 35f6a33
-    checkpoint 3 sha: 
+    checkpoint 3 sha: 7147d7a
   Sekhar Paladugu:
     repo: https://github.com/sekharp/contact-manager.git
     checkpoint 1 sha: c5c5a5e3a2f6f93de619c12e8070edb69b4f0d22
