--- a/1508/contact_manager.yml
+++ b/1508/contact_manager.yml
@@ -73,7 +73,7 @@ submissions:
     repo: https://github.com/matt-stj/contact_manager
     checkpoint 1 sha: a8c814a
     checkpoint 2 sha: a76cb7b
-    checkpoint 3 sha: 
+    checkpoint 3 sha: aadb397
   Matt Rooney:
     repo: https://github.com/MattRooney/contact-manager
     checkpoint 1 sha: ac89e978ff714d9ae8b1036830bc7ecc6df9e6c2
