--- a/1508/rails-mini-project.yml
+++ b/1508/rails-mini-project.yml
@@ -20,9 +20,9 @@ submissions:
   Aaron Careaga:
     repo:
     Heroku url:  
-  Ross Edfort:
-    repo:
-    Heroku url:  
+  Ross Edfort & Emily Dowdle:
+    repo: https://github.com/rossedfort/idea_box
+    Heroku url: http://lit-lake-7364.herokuapp.com/
   Marlo Major:
     repo:
     Heroku url: 
@@ -47,9 +47,6 @@ submissions:
   Edgar Duran:
     repo:
     Heroku url: 
-  Emily Dowdle:
-    repo:
-    Heroku url:  
   Charissa Lawrence:
     repo:
     Heroku url:  
