--- a/1508/rails-mini-project.yml
+++ b/1508/rails-mini-project.yml
@@ -26,9 +26,6 @@ submissions:
   Marlo Major:
     repo:
     Heroku url: 
-  Amber Crawford:
-    repo:
-    Heroku url:  
   Ryan Johnson:
     repo:
     Heroku url:  
@@ -53,9 +50,9 @@ submissions:
   Charissa Lawrence:
     repo:
     Heroku url:  
-  Robbie Lane:
-    repo:
-    Heroku url:  
+  Robbie Lane & Amber Crawford:
+    repo: https://github.com/robbielane/idea_box
+    Heroku url:  https://radiant-ravine-3333.herokuapp.com/
   Shannon Paige:
     repo:
     Heroku url:  
