--- a/1508/rails-mini-project.yml
+++ b/1508/rails-mini-project.yml
@@ -1,7 +1,7 @@
 submissions:
-  Tyler Komoroske:
-    repo: 
-    Heroku url: 
+  Tyler Komoroske & John Slota:
+    repo: https://github.com/tjkomor/idea_box
+    Heroku url: https://dashboard.heroku.com/apps/intense-brushlands-9408/resources
   Chad Minnerath:
     repo:
     Heroku url:  
