--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -1,4 +1,52 @@
 submissions:
-  Name:
+  Name:'Aaron Greenspan'
     repo: 
     url: 
+  Name:'Beth Sebian'
+    repo: 
+    url: 
+  Name:'Brant Wellman'
+    repo: 
+    url: 
+  Name:'Brenna Martenson'
+    repo: 
+    url: 
+  Name:'Dan Winter'
+    repo: 
+    url: 
+  Name:'Beth Secor'
+    repo: 
+    url: 
+  Name:'Greg Armstrong'
+    repo: 
+    url: 
+  Name:'Hector Huertas Baeza'
+    repo: 
+    url: 
+  Name:'James Crockett'
+    repo: 
+    url: 
+  Name:'Jordan Lawler'
+    repo: 
+    url: 
+  Name:'Joseph Perry'
+    repo: 
+    url: 
+  Name:'Lenny Myerson'
+    repo: 
+    url:
+  Name:'Penney Garrett'
+    repo: 
+    url:
+  Name:'Steve Pentler'
+    repo: 
+    url:
+  Name:'Steven Olson'
+    repo: 
+    url:
+  Name:'Taylor Moore'
+    repo: 
+    url:
+  Name:'Toni Rib'
+    repo: 
+    url:
