--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -42,8 +42,8 @@ submissions:
     repo: 
     url:
   Name:'Steven Olson'
-    repo: 
-    url:
+    repo: web guesser
+    url: https://github.com/SteveOscar/web-guesser
   Name:'Taylor Moore'
     repo: 
     url:
