--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -1,7 +1,7 @@
 submissions:
   Name:'Aaron Greenspan'
-    repo: 
-    url: 
+    repo: afg419/web_guesser
+    url: https://github.com/afg419/web_guesser/commits?author=afg419
   Name:'Beth Sebian'
     repo: 
     url: 
