--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -36,8 +36,8 @@ submissions:
     repo: 
     url:
   Name:'Penney Garrett'
-    repo: 
-    url:
+    repo: web_guesser
+    url: https://github.com/PenneyGadget/web_guesser
   Name:'Steve Pentler'
     repo: 
     url:
