add beth secor's repo

--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -15,8 +15,8 @@ submissions:
     repo: 
     url: 
   Name:'Beth Secor'
-    repo: 
-    url: 
+    repo: bethsecor/web_guesser
+    url: https://github.com/bethsecor/web_guesser
   Name:'Greg Armstrong'
     repo: 
     url: 
