--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -24,8 +24,8 @@ submissions:
     repo: 
     url: 
   Name:'James Crockett'
-    repo: 
-    url: 
+    repo: jecrockett/web_guesser
+    url: https://github.com/jecrockett/web_guesser
   Name:'Jordan Lawler'
     repo: 
     url: 
