--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -1,52 +1,52 @@
 submissions:
   Name:'Aaron Greenspan'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'Beth Sebian'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'Brant Wellman'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'Brenna Martenson'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'Dan Winter'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'Beth Secor'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'Greg Armstrong'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'Hector Huertas Baeza'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'James Crockett'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'Jordan Lawler'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'Joseph Perry'
-    repo: 
-    url: 
+    github repo link: 
+    url (if hosted live): 
   Name:'Lenny Myerson'
-    repo: 
-    url:
+    github repo link: 
+    url (if hosted live):
   Name:'Penney Garrett'
-    repo: 
-    url:
+    github repo link: 
+    url (if hosted live):
   Name:'Steve Pentler'
-    repo: 
-    url:
+    github repo link: 
+    url (if hosted live):
   Name:'Steven Olson'
-    repo: 
-    url:
+    github repo link: 
+    url (if hosted live):
   Name:'Taylor Moore'
-    repo: 
-    url:
+    github repo link: 
+    url (if hosted live):
   Name:'Toni Rib'
-    repo: 
-    url:
+    github repo link: 
+    url (if hosted live):
