--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -1,52 +1,35 @@
 submissions:
   Name:'Aaron Greenspan'
-    repo: afg419/web_guesser
-    url: https://github.com/afg419/web_guesser/commits?author=afg419
+    url: https://github.com/afg419/web_guesser
   Name:'Beth Sebian'
-    repo: 
     url: 
   Name:'Brant Wellman'
-    repo: 
     url: 
   Name:'Brenna Martenson'
-    repo: 
     url: 
   Name:'Dan Winter'
-    repo: 
     url: 
   Name:'Beth Secor'
-    repo: bethsecor/web_guesser
     url: https://github.com/bethsecor/web_guesser
   Name:'Greg Armstrong'
-    repo: 
     url: 
   Name:'Hector Huertas Baeza'
-    repo: 
     url: 
   Name:'James Crockett'
-    repo: jecrockett/web_guesser
     url: https://github.com/jecrockett/web_guesser
   Name:'Jordan Lawler'
-    repo: 
     url: 
   Name:'Joseph Perry'
-    repo: 
     url: 
   Name:'Lenny Myerson'
-    repo: 
     url:
   Name:'Penney Garrett'
-    repo: web_guesser
     url: https://github.com/PenneyGadget/web_guesser
   Name:'Steve Pentler'
-    repo: 
     url:
   Name:'Steven Olson'
-    repo: web guesser
     url: https://github.com/SteveOscar/web-guesser
   Name:'Taylor Moore'
-    repo: 
     url:
   Name:'Toni Rib'
-    repo: 
     url:
