completed web_guesser

--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -2,25 +2,25 @@ submissions:
   Name:'Aaron Greenspan'
     url: https://github.com/afg419/web_guesser
   Name:'Beth Sebian'
-    url: 
+    url:
   Name:'Brant Wellman'
-    url: 
+    url:
   Name:'Brenna Martenson'
-    url: 
+    url:
   Name:'Dan Winter'
-    url: 
+    url:
   Name:'Beth Secor'
     url: https://github.com/bethsecor/web_guesser
   Name:'Greg Armstrong'
-    url: 
+    url:
   Name:'Hector Huertas Baeza'
-    url: 
+    url:
   Name:'James Crockett'
     url: https://github.com/jecrockett/web_guesser
   Name:'Jordan Lawler'
-    url: 
+    url:
   Name:'Joseph Perry'
-    url: 
+    url:
   Name:'Lenny Myerson'
     url:
   Name:'Penney Garrett'
@@ -30,6 +30,6 @@ submissions:
   Name:'Steven Olson'
     url: https://github.com/SteveOscar/web-guesser
   Name:'Taylor Moore'
-    url:
+    url: https://github.com/Tman22/web_guesser
   Name:'Toni Rib'
     url:
