--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -12,7 +12,7 @@ submissions:
   Name:'Beth Secor'
     url: https://github.com/bethsecor/web_guesser
   Name:'Greg Armstrong'
-    url:
+    url: https://github.com/GregoryArmstrong/web_guesser
   Name:'Hector Huertas Baeza'
     url:
   Name:'James Crockett'
