--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -8,7 +8,7 @@ submissions:
   Name:'Brenna Martenson'
     url:
   Name:'Dan Winter'
-    url:
+    url: https://github.com/danjwinter/web_guesser
   Name:'Beth Secor'
     url: https://github.com/bethsecor/web_guesser
   Name:'Greg Armstrong'
