Steve O's blog links

--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -42,8 +42,8 @@ submissions:
     github repo link: 
     url (if hosted live):
   Name:'Steven Olson'
-    github repo link: 
-    url (if hosted live):
+    github repo link: https://github.com/SteveOscar/SteveOscar.github.io
+    url (if hosted live): http://steveoscar.github.io/
   Name:'Taylor Moore'
     github repo link: 
     url (if hosted live):
