add hector's web_guesser

--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -14,7 +14,7 @@ submissions:
   Name:'Greg Armstrong'
     url: https://github.com/GregoryArmstrong/web_guesser
   Name:'Hector Huertas Baeza'
-    url:
+    url: https://github.com/hectorhuertas/web_guesser
   Name:'James Crockett'
     url: https://github.com/jecrockett/web_guesser
   Name:'Jordan Lawler'
