--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -6,7 +6,7 @@ submissions:
   Name:'Brant Wellman'
     url:
   Name:'Brenna Martenson'
-    url:
+    url: https://github.com/martensonbj/web_guesser
   Name:'Dan Winter'
     url: https://github.com/danjwinter/web_guesser
   Name:'Beth Secor'
