Added link to web guesser gh repo

--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -2,7 +2,7 @@ submissions:
   Name:'Aaron Greenspan'
     url: https://github.com/afg419/web_guesser
   Name:'Beth Sebian'
-    url:
+    url: https://github.com/bethsebian/web_guesser
   Name:'Brant Wellman'
     url:
   Name:'Brenna Martenson'
