--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -24,7 +24,7 @@ submissions:
   Name:'Lenny Myerson'
     url:
   Name:'Penney Garrett'
-    url:
+    url: https://github.com/PenneyGadget/task_manager
   Name:'Steve Pentler'
     url:
   Name:'Steven Olson'
