--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -26,7 +26,7 @@ submissions:
   Name:'Penney Garrett'
     url:
   Name:'Steve Pentler'
-    url:
+    url: https://github.com/stevepentler/Task-Manager
   Name:'Steven Olson'
     url:
   Name:'Taylor Moore'
