add beth secor's blog

--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -15,8 +15,8 @@ submissions:
     github repo link: 
     url (if hosted live): 
   Name:'Beth Secor'
-    github repo link: 
-    url (if hosted live): 
+    github repo link: https://github.com/bethsecor/bethsecor.github.io
+    url (if hosted live): http://bethsecor.github.io/
   Name:'Greg Armstrong'
     github repo link: 
     url (if hosted live): 
