--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -39,8 +39,8 @@ submissions:
     github repo link: 
     url (if hosted live):
   Name:'Steve Pentler'
-    github repo link: 
-    url (if hosted live):
+    github repo link: https://github.com/stevepentler/stevepentler.github.io
+    url (if hosted live): http://stevepentler.github.io/2015/11/24/my-first-post.html
   Name:'Steven Olson'
     github repo link: https://github.com/SteveOscar/SteveOscar.github.io
     url (if hosted live): http://steveoscar.github.io/
