Adds Toni Rib's Blog
Some of the sections are still in work, but the minimum requirement of a main page & blog post is up and working.

--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -48,5 +48,5 @@ submissions:
     github repo link: 
     url (if hosted live):
   Name:'Toni Rib'
-    github repo link: 
-    url (if hosted live):
+    github repo link: https://github.com/ToniRib/personal-blog
+    url (if hosted live): http://tonirib.github.io/personal-blog/
