--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -4,7 +4,7 @@ submissions:
   Name:'Beth Sebian'
     url: https://github.com/bethsebian/web_guesser
   Name:'Brant Wellman'
-    url:
+    url: https://github.com/brantwellman/Turing-web-guesser
   Name:'Brenna Martenson'
     url: https://github.com/martensonbj/web_guesser
   Name:'Dan Winter'
