--- a/1510/module_2_prep/webguesser.yml
+++ b/1510/module_2_prep/webguesser.yml
@@ -18,7 +18,7 @@ submissions:
   Name:'James Crockett'
     url: https://github.com/jecrockett/web_guesser
   Name:'Jordan Lawler'
-    url:
+    url: https://github.com/Jlawlzz/web_guesser
   Name:'Joseph Perry'
     url: https://github.com/jwperry/web_guesser
   Name:'Lenny Myerson'
