--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -6,8 +6,8 @@ submissions:
     github repo link: 
     url (if hosted live): 
   Name:'Brant Wellman'
-    github repo link: 
-    url (if hosted live): 
+    github repo link: https://github.com/brantwellman/brantwellman.github.io
+    url (if hosted live): http://brantwellman.github.io/
   Name:'Brenna Martenson'
     github repo link: 
     url (if hosted live): 
