Steve O's task manager

--- a/1510/module_2_prep/task-manager.yml
+++ b/1510/module_2_prep/task-manager.yml
@@ -28,7 +28,7 @@ submissions:
   Name:'Steve Pentler'
     url: https://github.com/stevepentler/Task-Manager
   Name:'Steven Olson'
-    url:
+    url: https://github.com/SteveOscar/task_manager
   Name:'Taylor Moore'
     url:
   Name:'Toni Rib'
