--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -40,7 +40,7 @@ submissions:
     url (if hosted live):
   Name:'Steve Pentler'
     github repo link: https://github.com/stevepentler/stevepentler.github.io
-    url (if hosted live): http://stevepentler.github.io/2015/11/24/my-first-post.html
+    url (if hosted live): http://stevepentler.github.io/
   Name:'Steven Olson'
     github repo link: https://github.com/SteveOscar/SteveOscar.github.io
     url (if hosted live): http://steveoscar.github.io/
