--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -12,8 +12,8 @@ submissions:
     github repo link: 
     url (if hosted live): 
   Name:'Dan Winter'
-    github repo link: 
-    url (if hosted live): 
+    github repo link: https://github.com/danjwinter/danjwinter.github.io
+    url (if hosted live): http://danjwinter.github.io/
   Name:'Beth Secor'
     github repo link: https://github.com/bethsecor/bethsecor.github.io
     url (if hosted live): http://bethsecor.github.io/
