--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -33,7 +33,7 @@ submissions:
     github repo link: 
     url (if hosted live): 
   Name:'Lenny Myerson'
-    github repo link: 
+    github repo link: https://github.com/TheObtuseAutodidact/theobtuseautodidact.github.io
     url (if hosted live):
   Name:'Penney Garrett'
     github repo link: 
