--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -30,8 +30,8 @@ submissions:
     github repo link: 
     url (if hosted live): 
   Name:'Joseph Perry'
-    github repo link: 
-    url (if hosted live): 
+    github repo link: https://github.com/jwperry/jwperry.github.io
+    url (if hosted live): http://jwperry.github.io/
   Name:'Lenny Myerson'
     github repo link: 
     url (if hosted live):
