--- a/1510/module_2_prep/personal-html-css.yml
+++ b/1510/module_2_prep/personal-html-css.yml
@@ -3,8 +3,8 @@ submissions:
     github repo link: 
     url (if hosted live): 
   Name:'Beth Sebian'
-    github repo link: 
-    url (if hosted live): 
+    github repo link: https://github.com/bethsebian/bethsebian.github.io
+    url (if hosted live): http://bethsebian.github.io/
   Name:'Brant Wellman'
     github repo link: https://github.com/brantwellman/brantwellman.github.io
     url (if hosted live): http://brantwellman.github.io/
